4284
Note that omitting `DeployImplA`'s selftype does not solve the problem:


{code}
/Users/adriaan/Desktop/bugs/encoding_sealing_mixml.scala:15: error: illegal inheritance;
 self-type DeployImplA does not conform to SomeImplA's selftype SomeImplA{type A= this.ImplA}
trait DeployImplA extends SomeImplA {
                          ^
one error found
{code}
